src/components/search-results/search-results.css
button.search-button {
  width: 320px;
	height: 45px;
	padding: 10px;
	background: rgb(19, 96, 102);
	color: white;
	font-size: 18px;
	margin: 20px 0;
	border-radius: 3px;
}

button.add-button {
  width: 320px;
  height: 45px;
  padding: 10px;
  background: rgb(19, 96, 102);
  color: white;
  font-size: 18px;
  border-radius: 3px;
}

button.add-button:hover {
  background: black;
  color: rgb(255, 234, 42);
  cursor: pointer;
  }

.search-form {
  margin: -110px 100px 0 100px;
	text-align: center;
  background: white;
}

input[type="search"] {
	max-width: 320px;
	width: 100%;
	height: 40px;
  margin: 0 auto;
}


.album-search-list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
  margin-left: 0;
}

.search-list-item button {
	width: 20%;
	float: right;
}

.search-list-item {
	display: inline-block;
}

.title, .genre, .year {
	line-height: 175%;
}
.title {
	font-weight: 600;
	font-size:105%;
  word-wrap: break-word;
}

.search-item-text {
	display: block;
	width: 40%;
	margin-left: 175px;
	padding-top: 5px;
}

.album-search-results {
	height: fit-content;
	padding: 0;
	border: solid rgb(123, 123, 123) 1px;
	margin: 25px;
	text-align: start;
	border-radius: 3px;
	position: relative;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-ms-border-radius: 3px;
	-o-border-radius: 3px;
}


/* Extra small devices (phones, 465 and up) */
@media only screen and (min-width: 465) {

	.album-search-list {
		display: grid;
		grid-template-columns: 100%;
		grid-gap: 20px;
	}

}

/* Small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {

	.album-search-list {
		display: grid;
		grid-template-columns: 100%;
		grid-gap: 20px;
		margin-left: -25px;
  }
  
  .search-form {
		margin: 5px 0 0 10px;
		width: 320px;
	}
	
	input[type="search"] {
		width: 320px;
	}

} 

/* Medium devices (landscape tablets, 600 and up) */
@media only screen and (min-width: 600px) {
	.album-search-list {
		grid-template-columns: 100%;
		margin-left: 0;
  }
  
  .search-form {
    margin: 0;
    width: 300px;
  }

  input[type="search"] {
    width: 300px;
  }

  button.search-button {
    margin: 20px 0 20px 0;
    width: 300px;
  }

} 

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
	.album-search-list {
		grid-template-columns: repeat(2, 1fr);
		margin-left: 0;
  }
  
  .search-form {
    margin: -110px 0 0 350px;
  }

} 

/* Medium devices (landscape tablets, 860px and up) */
@media only screen and (min-width: 860px) {
	.album-search-list {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		grid-gap: 20px;
	}

} 

/* Large devices (landscape tablets, 1200px and up) */
@media only screen and (min-width: 1200px) { 
	.album-search-list { 
		display: grid;
		grid-template-columns: repeat(3, 1fr);
		grid-gap: 20px;
  }
  
  .search-form {
    margin-bottom: 0;
  } 

} 

